tests/NormalTests/paczka1/fuzzy1/81488750.err
Error in line 7: ndeY8M S217 -1,0
Error in line 8: JLOumsp A400 12,7
Error in line 26: 7LIDKkS A389 44,7
Error in line 21: OAPbzNu A400 73,0
Error in line 28: OAPbzNu S217 38,7
Error in line 30: TMHC9lrX S210 47,8
Error in line 29: OAPbzNu A389 43,8
